--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,9 @@ body {
     height: 400px;
     display: flex;
     flex-flow: column wrap;
-    justify-content: space-around;
+    justify-content: center;
     align-items: flex-start;
-    padding-left: 30px;
+    padding: 0 30px;
     
 }
 
@@ -62,13 +62,13 @@ body {
     text-transform: uppercase;
     font-family: 'Big Shoulders Display', cursive;
     font-size: 2.5rem;
+    padding: 30px 0;
 }
 
 .card p{
     color: var(--transparent-white);
     font-family: 'Lexend Deca', sans-serif;
-    font-size: 1rem;
-   
+    line-height: 25px;
 
 }
 
